changelog

-- next

+ "Untag" button to mute part of a thread.

++ Subscribe to hashtags.

+ Inline images in posts. Send and receive.

+ Somewhat functional admin console (TTY).

+ More JS free fallbacks for some basic functions.

+ Add chpass command.

+ Improved honker management.

+ Better markdown output.

+++ Add Honk Filtering and Censorship System (HFCS).

+ Times for events.

+ Split media database into separate blob.db.

+ Location checkin. Welcome to the... danger zone!

+++ Editing honks (Update activity).

+ Quick mention @alias.

+ Image descriptions.

++ Search. I hate it already.

+ Unbonking.

++ Hashtags that work?

++ Dynamic refresh and page switching without reloads.

++ Reply control. Ack replies to show them on the site.

+ Schema change. (add flags to honks table)

+ More robust retries for fetching objects.

+ Don't decode excessively large images and run out of memory.

-- 0.7.7

+ Add another retry to workaround pixelfed's general unreliability.

+ Attached images are not lost when previewing.

- Remove sensitivity to spicy peppers.

+ Keep reply to setting during preview.

+ Increase max thread retrieval depth to 10.

-- 0.7.6

+ Fix a bug where upgrades would not complete in one step.

-- 0.7.5

+ Fix a bug (introdcued 0.7.4) preventing new user creation from working.

+ Semi flexible URL patterns to allow transition from other software.

+ Improved ActivityPub parsing conformance for better compat with others.

+ Add server name to user agent.

+ What may be considered UI improvements.

-- 0.7.4

+ Ever more bug fixes.

+ Collapse posts based on custom regex match.

+ Tonks are now honk backs.

+ Show both avatars for bonks. Other minor refinements to UI.

+ Minimal support for Video activity and PeerTube compat.

+ Support for some user selectable styling. Currently, skinny column mode.

+ webp image transcoding.

-- 0.7.3

+ Better fedicompat so bonks are visible to pleroma followers.

-- 0.7.2
